--- a/imtixon-3/css/main.css
+++ b/imtixon-3/css/main.css
@@ -9,6 +9,7 @@ html {
 *::before {
     box-sizing: border-box;
     flex-wrap: wrap;
+    scroll-behavior: smooth;
 
 }
 
@@ -16,6 +17,7 @@ body {
     margin: 0%;
     display: flex;
     flex-direction: column;
+    background-color: #fff305;
 }
 
 main {
