--- a/imtixon-4/css/main.css
+++ b/imtixon-4/css/main.css
@@ -1,1 +1,59 @@
-@import url(blocks/_blocks.scss);/*# sourceMappingURL=main.css.map */
+/*  place-items: center;cursor: pointer;pointer-events: none; */
+html {
+    height: 100%;
+    scroll-behavior: smooth;
+    flex-wrap: wrap;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+    flex-wrap: wrap;
+
+}
+
+body {
+    margin: 0%;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(188, 187, 187, 0.527);
+}
+
+main {
+    flex-grow: 1;
+}
+
+img {
+    vertical-align: middle;
+    object-fit: cover;
+}
+
+.container {
+    margin: 0 auto;
+    width: 100%;
+    max-width: 1440px;
+    padding: 10px 30px;
+    display: grid;
+    place-items: center;
+}
+
+.navbar {
+    display: flex;
+    width: 100%;
+    background-color: rgb(17, 63, 171);
+    border-radius: 20px;
+
+}
+
+.list {
+    display: flex;
+    list-style-type: none;
+    flex-grow: 1;
+    gap: 15px;
+}
+
+.link {
+    text-decoration: none;
+    color: aquamarine;
+}
